# nn-scratch

./: .gitignore  CMakeLists.txt  Csv.cpp  Csv.h  Net.cpp  Net.h  NetAdam.cpp  NetThread.cpp  Operations.hpp  OperationsThreads.hpp  README.md  Scaler.cpp  Scaler.h  Scenario.cpp  Scenario.h  adam.cpp  adam.h  kaiming.cpp  kaiming.h  main.cpp  main.h  network  xavier.cpp  xavier.h
initializers/Glorot/: glorot_uniform.cpp  glorot_uniform.h
initializers/Kaiming/: kaiming.cpp
notused/: NetThread.cpp  Operations.hpp
optimizers/Adam/: adam.cpp
